compiler/tests/en/errors/match_value_pattern_on_variant.salam
// EXPECT: E077
func main:
    x := 5
    match x:
        i32 n =>: println n end
        else =>: println 0 end
    end
end
